<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActualizarPiloto2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AE4AC384"
        tools:context=".activities.ActualizarPiloto2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="27dp">

        <TextView
            android:id="@+id/txt_t"
            android:layout_width="215dp"
            android:layout_height="31dp"
            android:layout_marginTop="24dp"
            android:text="@string/actualizar"
            android:textColor="@color/white"
            android:textSize="@dimen/tamLetra"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_update_codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tamMargen"
            android:ems="10"
            android:hint="@string/codigo"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/tamLetra"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.559"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_t" />

        <EditText
            android:id="@+id/edt_update_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tamMargen"
            android:ems="10"
            android:hint="@string/name1"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/tamLetra"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edt_update_codigo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edt_update_codigo"
            app:layout_constraintTop_toBottomOf="@+id/edt_update_codigo" />

        <EditText
            android:id="@+id/edt_update_marca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tamMargen"
            android:ems="10"
            android:hint="@string/marca"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/tamLetra"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edt_update_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edt_update_name"
            app:layout_constraintTop_toBottomOf="@+id/edt_update_name" />

        <EditText
            android:id="@+id/edt_update_principio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tamMargen"
            android:ems="10"
            android:hint="@string/principioA"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/tamLetra"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edt_update_marca"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edt_update_marca"
            app:layout_constraintTop_toBottomOf="@+id/edt_update_marca" />

        <EditText
            android:id="@+id/edt_update_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tamMargen"
            android:ems="10"
            android:hint="@string/precio"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/tamLetra"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edt_update_principio"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edt_update_principio"
            app:layout_constraintTop_toBottomOf="@+id/edt_update_principio" />

        <Button
            android:id="@+id/bt_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="actualizar"
            android:text="@string/actualizar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_update_precio"
            tools:ignore="TextContrastCheck" />
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_update_puesto" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>